--- a/index.html
+++ b/index.html
@@ -2,6 +2,36 @@
 <html lang="en">
 
 <head>
+
+    <style>
+@media (max-width: 768px) {
+
+    .display-1 {
+        font-size: 2.5rem !important;
+    }
+
+    .display-3 {
+        font-size: 2rem !important;
+    }
+
+    .display-4 {
+        font-size: 1.8rem !important;
+    }
+
+    .carousel-caption h1 {
+        font-size: 2rem !important;
+    }
+
+    .carousel-caption h2 {
+        font-size: 1.2rem !important;
+    }
+
+    .section-title h1 {
+        font-size: 1.8rem !important;
+    }
+}
+</style>
+
     <meta charset="utf-8">
     <title>KOPPEE - Coffee Shop HTML Template</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
@@ -29,13 +59,15 @@
 <body>
     <!-- Navbar Start -->
     <div class="container-fluid p-0 nav-bar">
-        <nav class="navbar navbar-expand-lg bg-none navbar-dark py-3">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark py-3">
+
             <a href="index.html" class="navbar-brand px-lg-4 m-0">
                 <h1 class="m-0 display-4 text-uppercase text-white">KOPPEE</h1>
             </a>
-            <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
-                <span class="navbar-toggler-icon"></span>
-            </button>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse">
+    <span class="navbar-toggler-icon"></span>
+</button>
+
             <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
                 <div class="navbar-nav ml-auto p-4">
                     <a href="index.html" class="nav-item nav-link active">Home</a>
@@ -470,6 +502,11 @@
 
     <!-- Template Javascript -->
     <script src="js/main.js"></script>
-</body>
+</body
+
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.bundle.min.js"></script>
+
+
 
 </html>
