--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 </style>
 
     <meta charset="utf-8">
-    <title>KOPPEE - Coffee Shop HTML Template</title>
+    <title>KOPPEE - Coffee Shop</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="Free Website Template" name="keywords">
     <meta content="Free Website Template" name="description">
@@ -54,6 +54,7 @@
 
     <!-- Customized Bootstrap Stylesheet -->
     <link href="css/style.min.css" rel="stylesheet">
+
 </head>
 
 <body>
@@ -507,4 +508,5 @@
 
 
 </html>
+
 
